Changed image source

--- a/index.html
+++ b/index.html
@@ -27,9 +27,10 @@
 			<h1> <b>Christopher Kang</b></h1>
 			<p>First-Year CS Student at the University of Washington, Seattle
 				<ul class="icons">
-					<li><a href="https://github.com/christopherkang" target="_blank" class="icon fa-github alt"><span class="label">GitHub</span></a></li>
-					<li><a href="https://www.linkedin.com/in/christopher-kang" target="_blank" class="icon fa-linkedin alt"><span
-							 class="label">LinkedIn</span></a></li>
+					<li><a href="https://github.com/christopherkang" target="_blank" class="icon fa-github alt"><span
+								class="label">GitHub</span></a></li>
+					<li><a href="https://www.linkedin.com/in/christopher-kang" target="_blank"
+							class="icon fa-linkedin alt"><span class="label">LinkedIn</span></a></li>
 				</ul>
 		</header>
 
@@ -65,7 +66,7 @@
 							<li><a class="button" onclick="toBottom()">Contact me</a></li>
 						</ul>
 					</div>
-					<span class="image"><img src="images/profile2.jpg" alt="" /></span>
+					<span class="image"><img src="images/profile.jpg" alt="" /></span>
 				</div>
 			</section>
 
@@ -105,7 +106,8 @@
 				</ul>
 				<footer class="major">
 					<ul class="actions special">
-						<li><a href="KANG190114Resume.pdf" class="button" download="KangChristopherResume18Q2">Resume</a></li>
+						<li><a href="KANG190114Resume.pdf" class="button"
+								download="KangChristopherResume18Q2">Resume</a></li>
 					</ul>
 				</footer>
 			</section>
