--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 			<!-- <span class="logo"><img src="images/logo.svg" alt="" /></span> -->
 			<span class="icon introIcon fa-grav fa-5x" style="color:white"></span>
 			<h1> <b>Christopher Kang</b></h1>
-			<p>First-Year CS Student at the University of Washington, Seattle
+			<p>Chair of the CSE Student Advisory Council | University of Washington, Seattle
 				<ul class="icons">
 					<li><a href="https://github.com/christopherkang" target="_blank" class="icon fa-github alt"><span
 								class="label">GitHub</span></a></li>
@@ -56,11 +56,11 @@
 							<h2>Hello. It's nice to meet you.</h2>
 						</header>
 						<p>
-							I'm Christopher Kang, a freshman at the University of Washington. Previously, I've
+							I'm Christopher Kang, a sophomore at the University of Washington. Previously, I've
 							worked at <b>Pacific Northwest National Laboratory </b> and participated in
 							<b>Google's Computer Science Summer Institute</b>. <br>
-							UW is an exciting new opportunity to make connections, contribute to the community,
-							develop skills, and research.
+							My current research focuses are in <b>deep Reinforcement Learning</b> and <b>Quantum
+								Computing</b>.
 						</p>
 						<ul class="actions">
 							<li><a class="button" onclick="toBottom()">Contact me</a></li>
@@ -130,9 +130,8 @@
 					</li>
 					<li class="style2">
 						<span class="icon fa-medkit"></span>
-						<strong>Supervised Learning</strong>
-						Leveraged Convolutional Neural Networks to visually identify melanomas. Focused on
-						algorithms with maximal efficiency given limited computational resources.
+						<strong>Quantum Chemistry</strong>
+						Implemented a Variational Quantum Eigensolver in Q# for CSE 490Q.
 					</li>
 					<li class="style3">
 						<span class="icon fa-ravelry"></span>
@@ -179,14 +178,11 @@
 						</p>
 					</li>
 				</ul>
-				<footer class="major">
-					<!-- <ul class="actions special">
-											<li><a href="generic.html" class="button">Learn More</a></li>
-										</ul> -->
+				<!-- <footer class="major">
 					<ul class="actions special">
 						<li><a class="button" href="/honors/">Honors Portfolio / Blog</a></li>
 					</ul>
-				</footer>
+				</footer> -->
 			</section>
 
 			<!-- Get Started -->
@@ -210,7 +206,7 @@
 		<footer id="footer">
 			<section>
 				<h2>Questions?</h2>
-				<p>Feel free to email me if you have any questions! I'm always open to helping with new projects.</p>
+				<p>Feel free to email me.</p>
 			</section>
 			<section>
 				<h2>Contact Me</h2>
@@ -222,7 +218,7 @@
 				</dl>
 
 			</section>
-			<p class="copyright">&copy;2018 Christopher Kang. Design: <a href="https://html5up.net">HTML5 UP</a>.</p>
+			<p class="copyright">&copy;2019 Christopher Kang. Design: <a href="https://html5up.net">HTML5 UP</a>.</p>
 		</footer>
 
 	</div>
