190824 Added new resume

--- a/reading.html
+++ b/reading.html
@@ -11,7 +11,12 @@
 </head>
 
 <body>
-
+  <div>
+    <h1>Purpose</h1>
+    <p>
+      I try to actively learn by reading or watching TED talks. Here are some of my thoughts on what I've read.
+    </p>
+  </div>
   <div>
     <h1>Books</h1>
     <p>Top 5</p>
