Moved resume up

--- a/index.html
+++ b/index.html
@@ -62,8 +62,12 @@
 							My current research focuses are in <b>deep Reinforcement Learning</b> and <b>Quantum
 								Computing</b>.
 						</p>
-						<ul class="actions">
+						<!-- <ul class="actions">
 							<li><a class="button" onclick="toBottom()">Contact me</a></li>
+						</ul> -->
+						<ul class="actions">
+							<li><a href="resumes/190823KangResume.pdf" class="button"
+									download="KangChristopherResume"><strong>Resume</strong></a></li>
 						</ul>
 					</div>
 					<span class="image"><img src="images/profile.jpg" alt="" /></span>
@@ -104,12 +108,12 @@
 						</p>
 					</li>
 				</ul>
-				<footer class="major">
+				<!-- <footer class="major">
 					<ul class="actions special">
 						<li><a href="resumes/190823KangResume.pdf" class="button"
 								download="KangChristopherResume18Q2">Resume</a></li>
 					</ul>
-				</footer>
+				</footer> -->
 			</section>
 
 			<!-- Second Section -->
