--- a/index.html
+++ b/index.html
@@ -37,8 +37,8 @@
 		<!-- Nav -->
 		<nav id="nav">
 			<ul>
-				<li><a href="#intro" class="active"><b>Introduction</b></a></li>
-				<li><a href="#first"><b>Courses & Resume</b></a></li>
+				<li><a href="#intro" class="active"><b>Resume + Introduction</b></a></li>
+				<li><a href="#first"><b>Courses</b></a></li>
 				<li><a href="#second"><b>Past Projects</b></a></li>
 				<li><a href="#third"><b>Traits</b></a></li>
 				<!-- <li><a href="#cta"><b>Contact Me!</b></a></li> -->
@@ -77,7 +77,7 @@
 			<!-- First Section -->
 			<section id="first" class="main special">
 				<header class="major">
-					<h2>Courses & Resume</h2>
+					<h2>Courses</h2>
 				</header>
 				<ul class="features">
 					<li>
@@ -121,7 +121,8 @@
 				<header class="major">
 					<h2>Past Projects</h2>
 					<p>
-						My work has focused on machine earning and data analytics - here are some past projects.
+						My work has focused on machine earning and quantum computing research - here are some past
+						projects.
 					</p>
 				</header>
 				<ul class="statistics">
@@ -140,8 +141,7 @@
 					<li class="style3">
 						<span class="icon fa-ravelry"></span>
 						<strong>Quantum Algorithms</strong>
-						Identified machine learning algorithms that could enhance the development of
-						gate-based quantum algorithms, allowing for greater algorithmic abstraction.
+						Contributed to quantum circuit optimizations for quantum chemistry simulations.
 					</li>
 				</ul>
 				<!-- <p class="content"></p> -->
